// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text  /> should match snapshot 1`] = `
.c0 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  max-width: 40px;
  display: inline-block;
  cursor: pointer;
}

<div
  class="jsx-64609884"
>
  <div
    class="jsx-64609884 tooltip "
  >
    <p
      class="jsx-3390086683  text c0"
      maxwidth="40px"
    >
      <span>
        1234567890
      </span>
    </p>
  </div>
</div>
`;

exports[`<Text  /> should match snapshot when set maxCount 1`] = `
.c0 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  display: inherit;
  cursor: pointer;
}

<div
  class="jsx-64609884"
>
  <div
    class="jsx-64609884 tooltip "
  >
    <p
      class="jsx-3390086683  text c0"
    >
      12345...
    </p>
  </div>
</div>
`;
